# skipbo

./: CMakeLists.txt  README.md  RELEASES.md
src/: main-mesh-practice.txt  main.cpp  skipbo.cpp  skipbo.h  version.h.in
src/tests/: skipbotests.cc
